# cpp-clion-template

./: .gitignore  CMakeLists.txt  README.md
cpp-clion-template/src/: main.cpp
cpp-clion-template/test/: CMakeLists.txt  main_test.cpp
libs/cpp-clion-template/src/: CMakeLists.txt
libs/cpp-clion-template/test/: main_test.cpp
src/: main.cpp
test/: CMakeLists.txt
